Trying to fix overflow and get container to fill

--- a/src/Tomatoes.css
+++ b/src/Tomatoes.css
@@ -1,8 +1,12 @@
 .tomato-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100vw;
-  height: 100%;
-  overflow: hidden;
   pointer-events: none; /* Prevent interaction with the tomatoes */
+  flex:1;
+  overflow: hidden;
 }
 
 .tomato {
