--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0;
   font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -6,11 +11,13 @@ body {
   color: #F5F5F5; /* Off-white text color for contrast */
   --color-primary: #F5F5F5;
   --color-secondary: #143f08;
+  overflow-y: hidden;
+}
 
+.root {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  min-height: 100vh;
 }
 
 a {
